It should be done in page.tsx

--- a/hello_world/package.json
+++ b/hello_world/package.json
@@ -2,6 +2,7 @@
   "name": "hello_world",
   "version": "0.1.0",
   "private": true,
+  "main": "hello_world/src/app/index.tsx",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
