--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo",
-  "homepage": "http://gtcodelab.com/",
+  "homepage": "https://gtcodelab.com/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
