--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
+    "next-share": "^0.27.0",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
